# sts-cat

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  mise.toml  spec.md
.github/actions/exchange-token/: action.yml
.github/workflows/: _test.yml  ci.yml  release.yml
contrib/: aws-kms-import-pem.rb  e2e-test.rb
contrib/terraform/aws/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
docs/: aws-lambda.md
src/: config.rs  error.rs  exchange.rs  github.rs  lib.rs  oidc.rs  trust_policy.rs
src/signer/: aws_kms.rs  kms.rs  mod.rs  raw.rs
